Fixed spacing on the information and first page

--- a/Site/crewners.css
+++ b/Site/crewners.css
@@ -4,7 +4,7 @@ div, body{
 }
 
 .page {
-  margin-top: 0;
+  margin: 0;
   min-height: 800 ;
   width: 100%;
   padding-top: 2em;
@@ -23,11 +23,12 @@ div, body{
 }
 
 img#sign {
-  margin: 7%;
+  padding: 2em 0;
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 30%;
+  border-bottom: 1px white solid;
 }
 
 #homepage li {
@@ -96,7 +97,6 @@ img#sign {
 }
 
 #services {
-  margin-top: 4em;
   background: url('images/services.jpg') no-repeat top center fixed;
   -webkit-background-size:cover;
   -moz-background-size:cover;
@@ -201,18 +201,17 @@ img#sign {
 }
 
 #information li {
-  left-margin: auto;
-  right-margin: auto;
-  padding: 0.1em;
+  text-align: center;
   list-style: none;
+  float: left;
 }
 
 #information .contact {
   display: inline;
   float: center;
   text-align: center;
-  left-margin: auto;
-  right-margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   width: 50%;
   list-style: none;
   padding: 2em;
@@ -232,8 +231,8 @@ img#sign {
   text-decoration: none;
   color: white;
   text-align: center;
-  left-margin: auto;
-  right-margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #information .infop {
@@ -242,18 +241,30 @@ img#sign {
   font-style: italic;
   color: white;
   text-align: center;
-  left-margin: auto;
-  right-margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #information table {
   text-align: center;
-  left-margin: auto;
-  right-margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #information td {
   color: white;
+}
+
+#information ul {
+  margin: 0;
+  padding: 0;
+}
+
+#contact {
+  margin-top: 2em;
+  display: table;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 #book {
